<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>px4_isaac_ros_zed_bridge</name>
	<version>0.1.0</version>
	<description>Node to launch isaac ros visual slam with ros2 mavros px4</description>
	<maintainer email="skl1g14@soton.ac.uk">Shoon Kit Lim</maintainer>
	<url type="repository"></url>
	<license></license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
  	<depend>rclcpp_components</depend>
  	<depend>sensor_msgs</depend>
  	<depend>tf2_geometry_msgs</depend>
 	<depend>tf2_ros</depend>
  	<depend>tf2_msgs</depend>
  	<depend>geometry_msgs</depend>
  	<depend>nav_msgs</depend>
  	<depend>isaac_ros_visual_slam</depend>
 	<depend>isaac_ros_visual_slam_interfaces</depend>
	<depend>mav_msgs</depend>
	<depend>mavros</depend>
  	<depend>mavros_extras</depend>
  	<depend>mavros_msgs</depend>
	<depend>xacro</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
